# platformer-project

./: CMakeLists.txt  assets.h  enemies_controller.cpp  enemies_controller.h  enemy.h  globals.h  graphics.h  level.cpp  level.h  level_data.cpp  level_data.h  level_manager.cpp  level_manager.h  parser.cpp  parser.h  platformer.cpp  player.cpp  player.h  player_movement.cpp  player_movement.h  utilities.h
data/: levels.rll
